# llm-sft-workshop

./: .env  .gitignore  README.md  install.sh  main.py  merge.py  opencode.jsonc  pyproject.toml  utils.py  zensical.toml
.github/workflows/: docs.yml
configs/: accelerate_multi.yaml  accelerate_single.yaml  main.yaml
configs/dmis-lab/meerkat-instructions/: sft_liger_peft.yaml
configs/gretelai/synthetic_text_to_sql/: sft.yaml  sft_liger.yaml  sft_liger_slow.yaml
configs/ipst/slds/: sft.yaml  sft_liger.yaml  sft_liger_peft.yaml
docs/: conclusion.md  faq.md  index.md  introduction.md  setup.md  usecase1.md  usecase2.md  usecase3.md
prompts/dmis-lab/meerkat-instructions/: assistant.jinja  user.jinja
prompts/gretelai/synthetic_text_to_sql/: assistant.jinja  system.jinja  user.jinja
prompts/ipst/slds/: assistant.jinja  system.jinja  user.jinja
prompts/openlifescienceai/medqa/: assistant.jinja  system.jinja  user.jinja
ui/: chat_manager.py  theme.css
