[project]
name = "hes-so-alire"
version = "0.1.0"
description = "HES-SO_ALIRE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "emoji>=2.15.0",
    "evaluate>=0.4.6",
    "flash-attn",
    "flashinfer-cubin",
    "flashinfer-jit-cache",
    "flashinfer-python",
    "gradio>=5.49.1",
    "huggingface-hub[cli]>=0.35.3",
    "kaleido>=1.1.0",
    "liger-kernel>=0.6.2",
    "nvidia-ml-py>=13.580.82",
    "nvitop>=1.5.3",
    "peft>=0.17.1",
    "plotly>=6.3.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "sqlparse>=0.5.3",
    "torch>=2.8.0",
    "torchao>=0.14.1",
    "torchvision>=0.23.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
    "vllm>=0.11.0",
    "wandb>=0.22.2",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
flashinfer-cubin = { url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.5.0rc1/flashinfer_cubin-0.5.0rc1-py3-none-any.whl" }
flashinfer-python = { url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.5.0rc1/flashinfer_python-0.5.0rc1-py3-none-any.whl" }
flashinfer-jit-cache = { url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.5.0rc1/flashinfer_jit_cache-0.5.0rc1+cu128-cp39-abi3-manylinux_2_28_x86_64.whl" }
